--- a/mod4/act04/nbproject/private/private.properties
+++ b/mod4/act04/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=/home/aarmijo/.local/opt/glassfish/glassfish/domains/domain1
 j2ee.server.home=/home/aarmijo/.local/opt/glassfish/glassfish
 j2ee.server.instance=[/home/aarmijo/.local/opt/glassfish/glassfish:/home/aarmijo/.local/opt/glassfish/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=/home/aarmijo/.local/opt/glassfish
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/home/aarmijo/.netbeans/12.0/build.properties
